--- a/Sinergia_ERP.vbproj
+++ b/Sinergia_ERP.vbproj
@@ -59,7 +59,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net.Http" />
     <Reference Include="UIDC">
-      <HintPath>..\..\..\Documents\UI_DesignControls\UIDC.dll</HintPath>
+      <HintPath>..\..\..\Documents\UIDC.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
