Clientes cls tipomov cls

--- a/Sinergia_ERP.vbproj
+++ b/Sinergia_ERP.vbproj
@@ -103,15 +103,19 @@
     <Compile Include="negocio\ClsArea.vb" />
     <Compile Include="negocio\ClsCandidatos.vb" />
     <Compile Include="negocio\ClsCapacitaciones.vb" />
+    <Compile Include="negocio\ClsCliente.vb" />
     <Compile Include="negocio\ClsContratos.vb" />
     <Compile Include="negocio\ClsDepartamento.vb" />
     <Compile Include="negocio\ClsDetalleCapacitaciones.vb" />
+    <Compile Include="negocio\ClsDetalleCliente_Proveedores.vb" />
+    <Compile Include="negocio\ClsDetalleCliente_Transacciones.vb" />
     <Compile Include="negocio\ClsEmpleados.vb" />
     <Compile Include="negocio\ClsHorarios.vb" />
     <Compile Include="negocio\ClsPermisos.vb" />
     <Compile Include="negocio\ClsProfesion.vb" />
     <Compile Include="negocio\ClsPuestoTrabajo.vb" />
     <Compile Include="negocio\ClsSucursal.vb" />
+    <Compile Include="negocio\ClsTipoMovimiento.vb" />
     <Compile Include="negocio\ClsTipoPermiso.vb" />
     <Compile Include="negocio\ClsVacaciones.vb" />
     <Compile Include="negocio\ModulosVarios.vb" />
