--- a/Sinergia_ERP.vbproj
+++ b/Sinergia_ERP.vbproj
@@ -113,8 +113,10 @@
     <Compile Include="negocio\ClsHorarios.vb" />
     <Compile Include="negocio\ClsPermisos.vb" />
     <Compile Include="negocio\ClsProfesion.vb" />
+    <Compile Include="negocio\ClsProveedor.vb" />
     <Compile Include="negocio\ClsPuestoTrabajo.vb" />
     <Compile Include="negocio\ClsSucursal.vb" />
+    <Compile Include="negocio\ClsTerminoPago.vb" />
     <Compile Include="negocio\ClsTipoMovimiento.vb" />
     <Compile Include="negocio\ClsTipoPermiso.vb" />
     <Compile Include="negocio\ClsVacaciones.vb" />
@@ -135,6 +137,12 @@
       <DependentUpon>CT_AgregarProveedores.vb</DependentUpon>
     </Compile>
     <Compile Include="presentacion\CT_AgregarProveedores.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="presentacion\CT_AgregarTerminoPago.Designer.vb">
+      <DependentUpon>CT_AgregarTerminoPago.vb</DependentUpon>
+    </Compile>
+    <Compile Include="presentacion\CT_AgregarTerminoPago.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="presentacion\CT_Clientes.Designer.vb">
@@ -165,6 +173,12 @@
       <DependentUpon>CT_Proveedores.vb</DependentUpon>
     </Compile>
     <Compile Include="presentacion\CT_Proveedores.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="presentacion\CT_TerminoPago.Designer.vb">
+      <DependentUpon>CT_TerminoPago.vb</DependentUpon>
+    </Compile>
+    <Compile Include="presentacion\CT_TerminoPago.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="presentacion\CT_TipoMovimiento.Designer.vb">
@@ -307,6 +321,9 @@
     <EmbeddedResource Include="presentacion\CT_AgregarProveedores.resx">
       <DependentUpon>CT_AgregarProveedores.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="presentacion\CT_AgregarTerminoPago.resx">
+      <DependentUpon>CT_AgregarTerminoPago.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="presentacion\CT_Clientes.resx">
       <DependentUpon>CT_Clientes.vb</DependentUpon>
     </EmbeddedResource>
@@ -321,6 +338,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="presentacion\CT_Proveedores.resx">
       <DependentUpon>CT_Proveedores.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="presentacion\CT_TerminoPago.resx">
+      <DependentUpon>CT_TerminoPago.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="presentacion\CT_TipoMovimiento.resx">
       <DependentUpon>CT_TipoMovimiento.vb</DependentUpon>
